04-Networking/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: team-backend
spec:
  selector:
    app: backend
  ports:
    - port: 6379
      targetPort: 6379
